force-app/main/default/objects/File_Extension_Restriction__mdt/File_Extension_Restriction__mdt.object-meta.xml
<CustomObject>
    <description>Defines which file extensions are blocked when uploading files to specific Salesforce objects.</description>
    <label>File Extension Restriction</label>
    <pluralLabel>File Extension Restrictions</pluralLabel>
</CustomObject>