force-app/main/default/objects/File_Extension_Restriction__mdt/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Optional custom error shown when a blocked file is uploaded. Supports {extension} and {object} placeholders.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>