force-app/main/default/objects/File_Extension_Restriction__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false, this restriction rule is ignored.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>