force-app/main/default/objects/File_Extension_Restriction__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>API name of the object to protect (for example: Account, Contact, Opportunity).</description>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>