force-app/main/default/objects/File_Extension_Restriction__mdt/fields/Restricted_Extensions__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Extensions__c</fullName>
    <description>Comma-separated list of blocked extensions without or with a leading dot (for example: pdf, exe, .js).</description>
    <label>Restricted Extensions</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>